Shorten list of student steps if no matches are found.